<resources>
    <string name="app_name">JPVR</string>
    <string name="company_name">JADARD</string>
    <string name="Key">Key</string>
    <string name="Submit">Submit</string>
    <string name="Mode">Mode</string>
    <string name="Read">Read</string>
    <string name="AddCommand">Add Command:</string>
    <string name="Login">Login</string>
    <string name="Add">Add:</string>
    <string name="ToRead">Pressed To Read:\ </string>
    <string name="ToWrite">Pressed To Write:\ </string>
    <string name="LoadFile">Load File</string>
    <string name="Filename">File Name:</string>
    <string name="SaveFile">Save</string>
    <string name="SaveFileAs">Save As</string>
    <string name="AddKey">Add Key</string>
    <string name="Address">Address</string>
    <string name="Value">Value:</string>
    <string name="Version">Version:</string>
    <string name="ValueNoColon">Value:</string>
    <string name="ReadCommand">Read command</string>
    <string name="WriteCommand">Write command</string>
    <string name="SelectFile2Load">Select File To Load </string>
    <string name="Length">Byte(s):</string>
    <string name="DefaultReadByte">1</string>
    <string name="R">R</string>
    <string name="Enable">Enable</string>
    <string name="W">W</string>
    <string name="Len">Len</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="Run">Run</string>
    <string name="Edit">Edit</string>
    <string name="Browser">Browser</string>
    <string name="Import">Import</string>
    <string name="Discard">Discard</string>
    <string name="Apply">Apply</string>
    <string name="SaveToFile">Save to File</string>

    <string name="CommandActivity_InitialCode">Initial Code</string>
    <string name="CommandActivity_InitialCodeSelect">Initial Code Selection</string>
    <string name="CommandActivity_DSICmdEditor">DSI CMD Editor</string>
    <string name="CommandActivity_AddInitialCode">Add Initial Code</string>
    <string name="CommandActivity_LoadInitialCode">Loading Initial Code…</string>
    <string name="Result">Result</string>
    <string name="Delay">Delay(ms)</string>

    <string name="ALS">ALS</string>
    <string name="SLR">SLR</string>
    <string name="CABC">CABC</string>
    <string name="Brightness">Backlight</string>
    <string name="MIX_EFF">Mix Effect</string>
    <string name="CE">CE</string>
    <string name="CABC_Strength">CABC Strength</string>

    <string name="DD_ON">DD ON</string>
    <string name="DD_OFF">DD OFF</string>

    <string name="DEFAULT_Y">default y</string>
    <string name="SUGGEST_Y">suggest y</string>
    <string name="SUGGEST_MAX">suggest max</string>

    <string name="ErrorRead">Failed to read.</string>
    <string name="ErrorWrite">Failed to write.</string>
    <string name="DeleteAlert">Do you want to delete the selected key(s)?</string>
    <string name="NoKeyDataWarning">No Key Data to Save</string>
    <string name="InfoControl">Main page information display</string>
    <string name="Project">Project:</string>
    <string name="Model">Model:</string>
    <string name="SaveAsDialogTitle">Input filename to save</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="NewKey">Key</string>
    <string name="Verifying">Verifying keys</string>
    <string name="AddingMipiCmdTitle">Adding MIPI Command…</string>
    <string name="AddingMipiCmd">Would you like to add %1$s command at address %2$s with value %3$s ?</string>
    <string name="setting_reset_cmd">Reset all commands</string>
    <string name="CABC_Mode">CABC Mode</string>
    <string name="CABC_Mode_off">Off</string>
    <string name="CABC_Mode_Mov">Mov</string>
    <string name="CABC_Mode_Pic">Pic</string>
    <string name="CABC_Mode_UI">UI</string>

    <string name="PWM_Mode">PWM Mode</string>
    <string name="PWM_Mode_8">8b</string>
    <string name="PWM_Mode_10">10b</string>
    <string name="PWM_Mode_11">11b</string>
    <string name="PWM_Mode_12">12b</string>

    <string name="FileModification_Date">Date:</string>
    <string name="File_Size">&#160;&#160;Size:</string>
    <string name="AdaptiveDBV">Ad. DBV</string>
    <string name="AdaptiveSLR">Ad. SLR</string>

    <string-array name="projects">
        <item>9522</item>
        <item>others</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_index">index</string>
</resources>
