<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:keepScreenOn="true"
    tools:context="com.jadard.henry.jpvr.FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_height="wrap_content"
            android:background="#353535"
            android:layout_width="fill_parent"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:textStyle="bold"
                android:textSize="9pt"
                android:text="@string/WriteCommand"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/regWriteLL"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="#353535">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Add"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:digits="0123456789ABCDEF"
                android:maxLength="2"
                android:inputType="textCapCharacters"
                android:id="@+id/ET_writeAddress" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/Value"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:digits="0123456789ABCDEF"
                android:maxLength="2"
                android:inputType="textCapCharacters"
                android:id="@+id/ET_writeValue" />
            <Button
                android:text="@string/Submit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/B_Submit"
                android:onClick="onButtonClick"/>

        </LinearLayout>
        <LinearLayout
        android:layout_height="wrap_content"
            android:background="#353535"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:textStyle="bold"
                android:textSize="9pt"
                android:text="@string/ReadCommand"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/regReadLL"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:layout_height="wrap_content"
            android:background="#353535"
            android:layout_width="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Add"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:digits="0123456789ABCDEF"
                android:maxLength="2"
                android:inputType="textCapCharacters"
                android:id="@+id/ET_regReadAddress" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Length"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:digits="12345678"
                android:maxLength="1"
                android:text="@string/DefaultReadByte"
                android:inputType="textCapCharacters"
                android:id="@+id/ET_regReadLength" />
            <Button
                android:text="@string/Read"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/B_Read"
                android:onClick="onButtonClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="fill_horizontal"
            android:background="#353535"
            android:layout_marginTop="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Value"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:textSize="10pt"
                android:layout_height="wrap_content"
                android:textColorHighlight="@android:color/holo_red_light"
                android:textColor="@android:color/white"
                android:id="@+id/TV_regReadValue"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:visibility="invisible">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
